--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-loader": "^8.1.0",
+    "highcharts": "6.0.7",
     "phaser": "^3.24.0"
   },
   "devDependencies": {
