--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x]
+        node-version: [ 20.x]
 
     steps:
     - uses: actions/checkout@v4
@@ -58,7 +58,7 @@ jobs:
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: build-artifacts
+        name: susanasland-release-${{ github.ref_name }}
         path: build/
         retention-days: 7
 
