Improve version tracking and GitHub Actions workflow
- Update version formatting to use GitHub run attempt
- Add error handling for version and manifest modifications
- Modify artifact naming to include GitHub run attempt
- Update package.json with project name and description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "phaser_tutorial",
+  "name": "susanasland",
   "version": "1.0.0",
-  "description": "",
+  "description": "Susana's Land",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
