--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
       run: yarn run build
       env:
         CI: true
-        RUN_ATTEMPT: ${{ github.run_attempt }}
+        GITHUB_RUN_ID: ${{ github.run_id }}
 
     - name: Check build artifacts
       run: |
@@ -60,7 +60,7 @@ jobs:
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: susanasland-release-${{ github.ref_name }}-${{ github.run_attempt }}
+        name: susanasland-release-${{ github.ref_name }}-${{ github.run_id }}
         path: build/
         retention-days: 7
 
@@ -89,7 +89,7 @@ jobs:
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
-          name: susanasland-release-${{ github.ref_name }}-${{ github.run_attempt }}
+          name: susanasland-release-${{ github.ref_name }}-${{ github.run_id }}
           path: build
 
       - name: Configure AWS credentials
