--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [ 20.x]
+        node-version: [ 20.x ]
 
     steps:
     - uses: actions/checkout@v4
@@ -82,8 +82,8 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     environment: production
-    # Manual trigger using workflow_dispatch
-    if: github.event_name == 'workflow_dispatch'
+    # Deploy on push to master or manual trigger
+    if: github.event_name == 'workflow_dispatch' || (github.event_name == 'push' && github.ref == 'refs/heads/master')
     
     steps:
       - name: Download build artifacts
