--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Susana's Land",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest --run",
+    "test:watch": "vitest",
     "build": "node webpack.prod.js",
     "dev": "node webpack.dev.js"
   },
@@ -21,7 +22,9 @@
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.3",
     "html-webpack-plugin": "^4.3.0",
+    "jsdom": "^26.1.0",
     "raw-loader": "^4.0.1",
+    "vitest": "^3.2.4",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev": "^1.1.1",
